clusters/k8s-keiretsu/apps/external-name/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
  name: external-name
