clusters/k8s-keiretsu/apps/external-name/jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external-name
  name: jellyfin-svc
spec:
  externalName: jellyfin.local
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
  sessionAffinity: None
  type: ExternalName
