clusters/k8s-keiretsu/apps/external-name/kvm.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external-name
  name: kvm-svc
spec:
  externalName: kvm.local
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  type: ExternalName
