clusters/k8s-keiretsu/apps/external-name/proxmox.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external-name
  name: proxmox-svc
spec:
  externalName: proxmox.local
  ports:
    - name: https
      port: 8006
      protocol: TCP
      targetPort: 8006
  sessionAffinity: None
  type: ExternalName
