clusters/k8s-keiretsu/apps/external-name/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: homeassistant-kieretsu.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-svc
                port:
                  number: 80
  tls:
    - secretName: homeassistant-tls
      hosts:
        - homeassistant-kieretsu.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: truenas-kieretsu.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas-svc
                port:
                  number: 80
  tls:
    - secretName: truenas-tls
      hosts:
        - truenas-kieretsu.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvm-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    haproxy.org/server-ssl: "true"
    haproxy.org/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: kvm-kieretsu.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kvm-svc
                port:
                  number: 443
  tls:
    - secretName: kvm-tls
      hosts:
        - kvm-kieretsu.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: proxmox-kieretsu.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox-svc
                port:
                  number: 8006
  tls:
    - secretName: proxmox-tls
      hosts:
        - proxmox-kieretsu.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: router-kieretsu.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router-svc
                port:
                  number: 80
  tls:
    - secretName: router-tls
      hosts:
        - router-kieretsu.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin-kieretsu.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-svc
                port:
                  number: 8096
  tls:
    - secretName: jellyfin-tls
      hosts:
        - jellyfin-kieretsu.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: uptime-kieretsu.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-svc
                port:
                  number: 3001
  tls:
    - secretName: uptime-tls
      hosts:
        - uptime-kieretsu.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: frigate-kieretsu.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate-svc
                port:
                  number: 5000
  tls:
    - secretName: frigate-tls
      hosts:
        - frigate-kieretsu.rajsingh.info
