clusters/k8s-keiretsu/apps/external-name/router.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external-name
  name: router-svc
spec:
  externalName: router.local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: luke-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: router.lukehouge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router-svc
                port:
                  number: 80
  tls:
    - secretName: router-luke-tls
      hosts:
        - router.lukehouge.com
