clusters/k8s-keiretsu/apps/external-name/truenas.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external-name
  name: truenas-svc
spec:
  externalName: truenas.local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: luke-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: truenas.lukehouge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas-svc
                port:
                  number: 80
  tls:
    - secretName: truenasluke-tls
      hosts:
        - truenas.lukehouge.com
